UtahLiveDataTest/src/objects/FiscalYear__c.object
<CustomObject>
    <description>[Business] Stores the Fiscal Year information (Need to revisit)</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>FiscalYearNum</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYearNumber__c</fullName>
        <externalId>true</externalId>
        <label>Fiscal Year (Number)</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FiscalYearShort__c</fullName>
        <label>Fiscal Year (Short)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal Organization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State</fullName>
                    <default>true</default>
                    <label>State</label>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MST: Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Years</pluralLabel>
    <recordTypes>
        <fullName>Federal</fullName>
        <active>true</active>
        <description>Federal Fiscal Year</description>
        <label>Federal</label>
    </recordTypes>
    <recordTypes>
        <fullName>State</fullName>
        <active>true</active>
        <description>State Fiscal Year</description>
        <label>State</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>